--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,18 @@
 @import 'primeicons/primeicons.css';
 @import 'primeng/resources/themes/saga-blue/theme.css';
 @import 'primeng/resources/primeng.min.css';
+
+/* styles.css or component-specific CSS file */
+
+.navbar {
+    margin-bottom: 20px;
+  }
+  
+  .container {
+    margin-top: 20px;
+  }
+  
+  .table {
+    margin-top: 20px;
+  }
+  
